--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,10 +35,17 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  //secondary:  #32db64,
+  //danger:     #f53d3d,
+  //light:      #f4f4f4,
+  //dark:       #222
+
+ ding1:#6f7ae8,
+ ding2:#9997f4,
+ ding3:#bfadff,
+ ding4:#e4b6ff,
+ ding5:#efc1ff
+
 );
 
 
